[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-tree"
version = "1.0.0"
description = "Graph of python package dependencies"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Votre Nom", email="votre.email@example.com" }
]
keywords = ["graph", "dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["packaging"]

[project.scripts]
package-tree = "package_tree.tree:main"

[project.urls]
"Homepage" = "https://github.com/adelplanque/package-tree"
"Bug Tracker" = "https://github.com/adelplanque/package-tree/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
